y.output

state 0
	$accept: .input $end 

	PROGRAMA  shift 3
	.  error

	input  goto 1
	programa  goto 2

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  programa.    (1)

	.  reduce 1 (src line 47)


state 3
	programa:  PROGRAMA.ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN 

	ID  shift 4
	.  error


state 4
	programa:  PROGRAMA ID.PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN 

	PUNTOCOMA  shift 5
	.  error


state 5
	programa:  PROGRAMA ID PUNTOCOMA.$$2 vars funcs INICIO $$3 cuerpo FIN 
	$$2: .    (2)

	.  reduce 2 (src line 51)

	$$2  goto 6

state 6
	programa:  PROGRAMA ID PUNTOCOMA $$2.vars funcs INICIO $$3 cuerpo FIN 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 69)

	vars  goto 7

state 7
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars.funcs INICIO $$3 cuerpo FIN 
	funcs: .    (16)

	ENTERO  shift 14
	FLOTANTE  shift 15
	STRING  shift 16
	BOOL  shift 17
	NULA  shift 13
	.  reduce 16 (src line 110)

	tipo  goto 12
	tipo_retorno  goto 11
	funcs  goto 9
	func  goto 10

state 8
	vars:  VARS.lista_ids DOSPUNTOS tipo PUNTOCOMA $$5 vars 

	ID  shift 19
	.  error

	lista_ids  goto 18

state 9
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs.INICIO $$3 cuerpo FIN 

	INICIO  shift 20
	.  error


state 10
	funcs:  func.funcs 
	funcs: .    (16)

	ENTERO  shift 14
	FLOTANTE  shift 15
	STRING  shift 16
	BOOL  shift 17
	NULA  shift 13
	.  reduce 16 (src line 110)

	tipo  goto 12
	tipo_retorno  goto 11
	funcs  goto 21
	func  goto 10

state 11
	func:  tipo_retorno.ID $$17 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 

	ID  shift 22
	.  error


state 12
	tipo_retorno:  tipo.    (21)

	.  reduce 21 (src line 140)


state 13
	tipo_retorno:  NULA.    (22)

	.  reduce 22 (src line 145)


state 14
	tipo:  ENTERO.    (11)

	.  reduce 11 (src line 89)


state 15
	tipo:  FLOTANTE.    (12)

	.  reduce 12 (src line 94)


state 16
	tipo:  STRING.    (13)

	.  reduce 13 (src line 98)


state 17
	tipo:  BOOL.    (14)

	.  reduce 14 (src line 102)


state 18
	vars:  VARS lista_ids.DOSPUNTOS tipo PUNTOCOMA $$5 vars 

	DOSPUNTOS  shift 23
	.  error


state 19
	lista_ids:  ID.lista_ids_prima 
	lista_ids_prima: .    (10)

	COMA  shift 25
	.  reduce 10 (src line 84)

	lista_ids_prima  goto 24

state 20
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO.$$3 cuerpo FIN 
	$$3: .    (3)

	.  reduce 3 (src line 56)

	$$3  goto 26

state 21
	funcs:  func funcs.    (15)

	.  reduce 15 (src line 108)


state 22
	func:  tipo_retorno ID.$$17 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 
	$$17: .    (17)

	.  reduce 17 (src line 113)

	$$17  goto 27

state 23
	vars:  VARS lista_ids DOSPUNTOS.tipo PUNTOCOMA $$5 vars 

	ENTERO  shift 14
	FLOTANTE  shift 15
	STRING  shift 16
	BOOL  shift 17
	.  error

	tipo  goto 28

state 24
	lista_ids:  ID lista_ids_prima.    (8)

	.  reduce 8 (src line 72)


state 25
	lista_ids_prima:  COMA.ID lista_ids_prima 

	ID  shift 29
	.  error


state 26
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3.cuerpo FIN 

	LLAVE_IZQ  shift 31
	.  error

	cuerpo  goto 30

state 27
	func:  tipo_retorno ID $$17.PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 

	PAR_IZQ  shift 32
	.  error


state 28
	vars:  VARS lista_ids DOSPUNTOS tipo.PUNTOCOMA $$5 vars 

	PUNTOCOMA  shift 33
	.  error


state 29
	lista_ids_prima:  COMA ID.lista_ids_prima 
	lista_ids_prima: .    (10)

	COMA  shift 25
	.  reduce 10 (src line 84)

	lista_ids_prima  goto 34

state 30
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo.FIN 

	FIN  shift 35
	.  error


state 31
	cuerpo:  LLAVE_IZQ.estatutos LLAVE_DER 
	estatutos: .    (31)

	SI  shift 44
	MIENTRAS  shift 45
	ESCRIBE  shift 46
	ID  shift 43
	.  reduce 31 (src line 175)

	estatutos  goto 36
	estatuto  goto 37
	asigna  goto 38
	condicion  goto 39
	ciclo  goto 40
	llamada  goto 41
	imprime  goto 42

state 32
	func:  tipo_retorno ID $$17 PAR_IZQ.params PAR_DER LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 
	params: .    (25)

	ID  shift 48
	.  reduce 25 (src line 157)

	params  goto 47

state 33
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA.$$5 vars 
	$$5: .    (5)

	.  reduce 5 (src line 63)

	$$5  goto 49

state 34
	lista_ids_prima:  COMA ID lista_ids_prima.    (9)

	.  reduce 9 (src line 79)


state 35
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN.    (4)

	.  reduce 4 (src line 60)


state 36
	cuerpo:  LLAVE_IZQ estatutos.LLAVE_DER 

	LLAVE_DER  shift 50
	.  error


state 37
	estatutos:  estatuto.estatutos 
	estatutos: .    (31)

	SI  shift 44
	MIENTRAS  shift 45
	ESCRIBE  shift 46
	ID  shift 43
	.  reduce 31 (src line 175)

	estatutos  goto 51
	estatuto  goto 37
	asigna  goto 38
	condicion  goto 39
	ciclo  goto 40
	llamada  goto 41
	imprime  goto 42

state 38
	estatuto:  asigna.    (32)

	.  reduce 32 (src line 178)


state 39
	estatuto:  condicion.    (33)

	.  reduce 33 (src line 180)


state 40
	estatuto:  ciclo.    (34)

	.  reduce 34 (src line 181)


state 41
	estatuto:  llamada.PUNTOCOMA 

	PUNTOCOMA  shift 52
	.  error


state 42
	estatuto:  imprime.    (36)

	.  reduce 36 (src line 183)


state 43
	asigna:  ID.ASIGNA expresion PUNTOCOMA 
	llamada:  ID.$$46 PAR_IZQ argumentos PAR_DER 
	$$46: .    (46)

	ASIGNA  shift 53
	.  reduce 46 (src line 235)

	$$46  goto 54

state 44
	condicion:  SI.PAR_IZQ expresion PAR_DER $$38 cuerpo sino_opc PUNTOCOMA 

	PAR_IZQ  shift 55
	.  error


state 45
	ciclo:  MIENTRAS.$$43 PAR_IZQ expresion PAR_DER $$44 HAZ cuerpo PUNTOCOMA 
	$$43: .    (43)

	.  reduce 43 (src line 220)

	$$43  goto 56

state 46
	imprime:  ESCRIBE.PAR_IZQ imprime_args PAR_DER PUNTOCOMA 

	PAR_IZQ  shift 57
	.  error


state 47
	func:  tipo_retorno ID $$17 PAR_IZQ params.PAR_DER LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 

	PAR_DER  shift 58
	.  error


state 48
	params:  ID.DOSPUNTOS tipo $$23 params_prima 

	DOSPUNTOS  shift 59
	.  error


state 49
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA $$5.vars 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 69)

	vars  goto 60

state 50
	cuerpo:  LLAVE_IZQ estatutos LLAVE_DER.    (29)

	.  reduce 29 (src line 169)


state 51
	estatutos:  estatuto estatutos.    (30)

	.  reduce 30 (src line 173)


state 52
	estatuto:  llamada PUNTOCOMA.    (35)

	.  reduce 35 (src line 182)


state 53
	asigna:  ID ASIGNA.expresion PUNTOCOMA 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 61
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 54
	llamada:  ID $$46.PAR_IZQ argumentos PAR_DER 

	PAR_IZQ  shift 76
	.  error


state 55
	condicion:  SI PAR_IZQ.expresion PAR_DER $$38 cuerpo sino_opc PUNTOCOMA 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 77
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 56
	ciclo:  MIENTRAS $$43.PAR_IZQ expresion PAR_DER $$44 HAZ cuerpo PUNTOCOMA 

	PAR_IZQ  shift 78
	.  error


state 57
	imprime:  ESCRIBE PAR_IZQ.imprime_args PAR_DER PUNTOCOMA 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 81
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70
	imprime_args  goto 79
	imprime_val  goto 80

state 58
	func:  tipo_retorno ID $$17 PAR_IZQ params PAR_DER.LLAVE_IZQ vars cuerpo return_opc LLAVE_DER PUNTOCOMA 

	LLAVE_IZQ  shift 82
	.  error


state 59
	params:  ID DOSPUNTOS.tipo $$23 params_prima 

	ENTERO  shift 14
	FLOTANTE  shift 15
	STRING  shift 16
	BOOL  shift 17
	.  error

	tipo  goto 83

state 60
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA $$5 vars.    (6)

	.  reduce 6 (src line 68)


state 61
	asigna:  ID ASIGNA expresion.PUNTOCOMA 

	PUNTOCOMA  shift 84
	.  error


state 62
	expresion:  exp.    (59)
	expresion:  exp.MAYOR $$60 exp 
	expresion:  exp.MENOR $$62 exp 
	expresion:  exp.DIF $$64 exp 
	expresion:  exp.IGUAL $$66 exp 
	exp:  exp.MAS $$68 termino 
	exp:  exp.MENOS $$70 termino 

	MAS  shift 89
	MENOS  shift 90
	MAYOR  shift 85
	MENOR  shift 86
	DIF  shift 87
	IGUAL  shift 88
	.  reduce 59 (src line 293)


state 63
	exp:  termino.    (72)
	termino:  termino.MULT $$73 factor 
	termino:  termino.DIVIDE $$75 factor 

	MULT  shift 91
	DIVIDE  shift 92
	.  reduce 72 (src line 355)


state 64
	termino:  factor.    (77)

	.  reduce 77 (src line 381)


state 65
	factor:  PAR_IZQ.expresion PAR_DER 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 93
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 66
	factor:  MAS.factor 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	factor  goto 94
	cte  goto 69
	llamada  goto 70

state 67
	factor:  MENOS.factor 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	factor  goto 95
	cte  goto 69
	llamada  goto 70

state 68
	llamada:  ID.$$46 PAR_IZQ argumentos PAR_DER 
	factor:  ID.    (81)
	$$46: .    (46)

	PAR_IZQ  reduce 46 (src line 235)
	.  reduce 81 (src line 400)

	$$46  goto 54

state 69
	factor:  cte.    (82)

	.  reduce 82 (src line 406)


state 70
	factor:  llamada.    (83)

	.  reduce 83 (src line 410)


state 71
	cte:  CTE_ENT.    (84)

	.  reduce 84 (src line 423)


state 72
	cte:  CTE_FLOT.    (85)

	.  reduce 85 (src line 430)


state 73
	cte:  VERDADERO.    (86)

	.  reduce 86 (src line 436)


state 74
	cte:  FALSO.    (87)

	.  reduce 87 (src line 442)


state 75
	cte:  LETRERO.    (88)

	.  reduce 88 (src line 448)


state 76
	llamada:  ID $$46 PAR_IZQ.argumentos PAR_DER 
	argumentos: .    (50)

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  reduce 50 (src line 257)

	expresion  goto 97
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70
	argumentos  goto 96

state 77
	condicion:  SI PAR_IZQ expresion.PAR_DER $$38 cuerpo sino_opc PUNTOCOMA 

	PAR_DER  shift 98
	.  error


state 78
	ciclo:  MIENTRAS $$43 PAR_IZQ.expresion PAR_DER $$44 HAZ cuerpo PUNTOCOMA 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 99
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 79
	imprime:  ESCRIBE PAR_IZQ imprime_args.PAR_DER PUNTOCOMA 

	PAR_DER  shift 100
	.  error


state 80
	imprime_args:  imprime_val.imprime_args_prima 
	imprime_args_prima: .    (57)

	COMA  shift 102
	.  reduce 57 (src line 282)

	imprime_args_prima  goto 101

state 81
	imprime_val:  expresion.    (58)

	.  reduce 58 (src line 285)


state 82
	func:  tipo_retorno ID $$17 PAR_IZQ params PAR_DER LLAVE_IZQ.vars cuerpo return_opc LLAVE_DER PUNTOCOMA 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 69)

	vars  goto 103

state 83
	params:  ID DOSPUNTOS tipo.$$23 params_prima 
	$$23: .    (23)

	.  reduce 23 (src line 151)

	$$23  goto 104

state 84
	asigna:  ID ASIGNA expresion PUNTOCOMA.    (37)

	.  reduce 37 (src line 186)


state 85
	expresion:  exp MAYOR.$$60 exp 
	$$60: .    (60)

	.  reduce 60 (src line 298)

	$$60  goto 105

state 86
	expresion:  exp MENOR.$$62 exp 
	$$62: .    (62)

	.  reduce 62 (src line 307)

	$$62  goto 106

state 87
	expresion:  exp DIF.$$64 exp 
	$$64: .    (64)

	.  reduce 64 (src line 316)

	$$64  goto 107

state 88
	expresion:  exp IGUAL.$$66 exp 
	$$66: .    (66)

	.  reduce 66 (src line 325)

	$$66  goto 108

state 89
	exp:  exp MAS.$$68 termino 
	$$68: .    (68)

	.  reduce 68 (src line 336)

	$$68  goto 109

state 90
	exp:  exp MENOS.$$70 termino 
	$$70: .    (70)

	.  reduce 70 (src line 346)

	$$70  goto 110

state 91
	termino:  termino MULT.$$73 factor 
	$$73: .    (73)

	.  reduce 73 (src line 362)

	$$73  goto 111

state 92
	termino:  termino DIVIDE.$$75 factor 
	$$75: .    (75)

	.  reduce 75 (src line 372)

	$$75  goto 112

state 93
	factor:  PAR_IZQ expresion.PAR_DER 

	PAR_DER  shift 113
	.  error


state 94
	factor:  MAS factor.    (79)

	.  reduce 79 (src line 392)


state 95
	factor:  MENOS factor.    (80)

	.  reduce 80 (src line 396)


state 96
	llamada:  ID $$46 PAR_IZQ argumentos.PAR_DER 

	PAR_DER  shift 114
	.  error


state 97
	argumentos:  expresion.$$48 argumentos_prima 
	$$48: .    (48)

	.  reduce 48 (src line 248)

	$$48  goto 115

state 98
	condicion:  SI PAR_IZQ expresion PAR_DER.$$38 cuerpo sino_opc PUNTOCOMA 
	$$38: .    (38)

	.  reduce 38 (src line 197)

	$$38  goto 116

state 99
	ciclo:  MIENTRAS $$43 PAR_IZQ expresion.PAR_DER $$44 HAZ cuerpo PUNTOCOMA 

	PAR_DER  shift 117
	.  error


state 100
	imprime:  ESCRIBE PAR_IZQ imprime_args PAR_DER.PUNTOCOMA 

	PUNTOCOMA  shift 118
	.  error


state 101
	imprime_args:  imprime_val imprime_args_prima.    (55)

	.  reduce 55 (src line 276)


state 102
	imprime_args_prima:  COMA.imprime_val imprime_args_prima 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	expresion  goto 81
	exp  goto 62
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70
	imprime_val  goto 119

state 103
	func:  tipo_retorno ID $$17 PAR_IZQ params PAR_DER LLAVE_IZQ vars.cuerpo return_opc LLAVE_DER PUNTOCOMA 

	LLAVE_IZQ  shift 31
	.  error

	cuerpo  goto 120

state 104
	params:  ID DOSPUNTOS tipo $$23.params_prima 
	params_prima: .    (28)

	COMA  shift 122
	.  reduce 28 (src line 166)

	params_prima  goto 121

state 105
	expresion:  exp MAYOR $$60.exp 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	exp  goto 123
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 106
	expresion:  exp MENOR $$62.exp 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	exp  goto 124
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 107
	expresion:  exp DIF $$64.exp 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	exp  goto 125
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 108
	expresion:  exp IGUAL $$66.exp 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	exp  goto 126
	termino  goto 63
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 109
	exp:  exp MAS $$68.termino 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	termino  goto 127
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 110
	exp:  exp MENOS $$70.termino 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	termino  goto 128
	factor  goto 64
	cte  goto 69
	llamada  goto 70

state 111
	termino:  termino MULT $$73.factor 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	factor  goto 129
	cte  goto 69
	llamada  goto 70

state 112
	termino:  termino DIVIDE $$75.factor 

	ID  shift 68
	CTE_ENT  shift 71
	CTE_FLOT  shift 72
	LETRERO  shift 75
	VERDADERO  shift 73
	FALSO  shift 74
	MAS  shift 66
	MENOS  shift 67
	PAR_IZQ  shift 65
	.  error

	factor  goto 130
	cte  goto 69
	llamada  goto 70

state 113
	factor:  PAR_IZQ expresion PAR_DER.    (78)

	.  reduce 78 (src line 387)


state 114
	llamada:  ID $$46 PAR_IZQ argumentos PAR_DER.    (47)

	.  reduce 47 (src line 241)

